<resources>
    <string name="app_name">M-SHIRIKI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <!--<string name="gcm_defaultSenderId">567122592543</string>-->
    <!--<string name="gcm_defaultSenderId">421216860647</string>-->
    <string-array name="newsText">
        <item>Research Shows Organic Agriculture Boosts Local Economies</item>
        <item>Keep updated about the agricultural reports only on Farm Bureau app. </item>
        <item>17 Farmer Heroes for Sustainability, Equality, and Defense of Traditions</item>
    </string-array>

    <style name="cardViewStyle">
        <item name="android:layout_margin">@dimen/cardLayoutMargin</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    <string name="nameInfo">Abhishek Sharma [India]\n\n3385,Sector59\nMohali</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_airtime">Airtime</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_changepin">Changepin</string>

    <string name="walletIDreq">Account ID is required / Shyiramo nomero ya konti</string>


    <string-array name="menu_content">
        <item>Change Language</item>
        <item>System Update</item>
        <item>Logout</item>
    </string-array>

    <string-array name="icon">
        <item>@drawable/translate</item>
        <item>@drawable/update</item>
        <item>@drawable/logout</item>
    </string-array>

    <string name="approval_loan"> Loan Approved Successfully</string>
    <string name="pin_change">Change Pin Successfully</string>
    <string name="txnPinRequired">PIN is required / Shyiramo umubare w\’ibanga</string>
    <string name="txnPinReq">Pin should not be empty / Ijambobanga ntirigomba kuba ubusa</string>
    <string name="newPinRequired">New Pin should not be empty / Ijambobanga rishya ntiriba ubusa</string>
    <string name="retypePinRequired">Confirm Pin should not be empty / Kemeza ijambobanga ntiriba ubusa</string>
    <string name="msgtxnPindiff"> PIN and New pin should not be same / Ijambobanga risanzwe ntabwo rigomba gusa nirishya</string>
    <string name="msgretypePinsame">New pin and Confirm Pin should be same / ijambobanga banga rishya niryo wemeza bigombagusa</string>
    <string name="accountIDreq">Mobile Number should not be empty</string>
    <string name="mobilenumberreq">Mobile Number length should  be 9/ Nomero ya terefone</string>
    <string name="recharge">Mobile Recharge Successfully</string>
    <string name="operatorreqd">Please select any operator / Hitamo umurongo</string>
    <string name="amountreq">Amount is required / Shyiramo umubare</string>
    <string name="loading">Loading / Gushakisha...</string>
    <string name="plsWait">Please wait while we are progressing / Ihangane biracyakorwa...</string>
    <string name="operatorname">Select operator / Hitamo umurongo</string>
    <string name="membersince">Member since</string>
    <string name="msgNoInternetConnection">You do not have Internet connection / Nta interineti ufit</string>
    <string name="lblNoTransactionFound">No Transaction Found / Nta hererekenya ryabonetse</string>
    <string name="nocommission">No Commission / Nta gihembo</string>
    <string name="noloanhistory">No History / Nta byakozwe</string>
    <string name="selectAmount">Please select an amount for loan / Hitamo umubare w’ideni</string>
    <string name="Select_Dates">Select Dates / Hitamo itariki</string>
    <string name="From_date">From date / Guhera kwitariki</string>
    <string name="To_date">To date / Kugeza kwitariki</string>
    <string name="Select_Options">Select Options / Hitamo</string>
    <string name="Notification">Notification / Ikibyemeza</string>
    <string name="payamount">Are you sure want to pay this / Nibyo urashaka kwishyura?</string>
    <string name="forgotpin">Forgot PIN ?</string>
    <string name="accountbalance">Account Balance</string>
    <string name="outstandingCredit">Outstanding Credit</string>
    <string name="commissionbal">Commission Balance</string>
    <string name="loanpently">Loan Penalty</string>
    <string name="ok">OK</string>
    <string name="mshiriki">M-SHIRIKI</string>
    <string name="goodmorningmsg">Good Morning / Mwaramutse</string>
    <string name="dstv">DSTV</string>
    <string name="canal">Canal</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation / Kubyemeza</string>
    <string name="nationid">National ID / Nomero y’irangamuntu</string>
    <string name="meternoreq">Meter number is required / Shyiramo nomero ya cash power</string>
    <string name="nationreq">National ID is required / Shyiramo nomero y\’irangamuntu</string>
    <string name="resetpimsg">National ID doesn’t match,You cann’t reset PIN / Irangamuntu siyo,Ntiwahindura umubare w\’ibanga</string>
    <string name="smartcardreq"> Smart card number is required / Shyiramo nomero y\’ikarita</string>
    <string name="phonereq">Phone number is required / Shyiramo nomero ya terefone</string>
    <string name="amountre">Amount is required</string>
    <string name="agentpin">PIN is required</string>
    <string name="nonotifound">No Notification Found / Ntampinduka yagaragaye</string>
    <string name="commission">Commission / Igihembo</string>


    <!--Login Screen-->
    <string name="Account_Id">Account ID / Nomero ya konti</string>
    <string name="Transaction_PIN">Transaction PIN / Umubare w\’ibanga</string>
    <string name="Login">Login / injira</string>


    <!--My Service-->
    <string name="My_Services">My Services /\nSerivisi zacu</string>
    <string name="Airtime">Airtime / Inite</string>
    <string name="Electricity">Electricity / Umuriro</string>
    <string name="Rra">RRA / Nomero Ya</string>
    <string name="Internet">Internet / Interineti</string>

    <!--My account layout-->
    <string name="My_Account">My Account /\nKonti yanjye</string>
    <string name="Request_Loan">Request credit / Gusaba ideni</string>
    <string name="Commission_Report"> Today Commission Report / Raporo ya comisiyo</string>
    <string name="Commission_Repor"> Commission Report / Raporo ya comisiyo</string>
    <string name="Loan_History">Credit history / Ibyakozwe kw\’ideni </string>
    <string name="Transaction_History">Transaction History / Ibyakozwe</string>
    <string name="Balance_Enquiry">Balance Enquiry / Amafaranga asigaye</string>
    <string name="Bank_to_Wallet">Bank to Wallet / Kwishyurwa</string>

    <!--Airtime layout-->
    <string name="Select_Mobile_Operator">Select Mobile Operator / Hitamu umurongo</string>
    <string name="Mobile_Number">Customer Mobile Number / Nomero ya telefoni</string>
    <string name="Amount_txt">Amount / Umubare</string>
    <!--<string name="Costumer_number">Cust</string>-->

    <string name="Agent_Pin">Agent Pin / Umubare w\’ibanga</string>
    <string name="confirm">Confirm / Emeza</string>

    <!--Elect-->
    <string name="Meter_Number">Meter Number / Nomero ya cash power</string>

    <!--Canal Layout-->
    <string name="Select_Bonquet">Select Bonquet / Hitamo Bonquet</string>
    <string name="Smart_Card_Number">Smart Card Number / Nomero y\’ ikarita</string>
    <string name="Months_To_Subscribe">Months To Subscribe / Amezi y\’ifata buguzi</string>
    <string name="Phone_txt">Phone / Nomero ya telefoni</string>
    <string name="Choose_a_provider">Choose a provider / Hitamo</string>

    <!--RRa Layout-->
    <string name="RRA_Ref_id">RRA Ref id / Nomero Ya  </string>

    <!--New Loan Request layout-->
    <string name="New_Loan_Request">New Credit Request / Gusaba ideni rishya</string>

    <!--Loan history layout-->
    <string name="Description">Description /\nUrutonde</string>
    <string name="Balance">Balance / Ibisigaye</string>

    <!--Transaction history-->
    <string name="Transaction_Detail">Transaction Detail / Ibisobanuro</string>
    <string name="Providers">Providers /\nAma serivisi</string>

    <!--CommissionReport-->
    <string name="Services">Services /\nSerivisi</string>
    <string name="Total">Total / Igiteranyo</string>

    <!--changePin-->
    <string name="Change_PIN">Change PIN / Hindura ijambobanga</string>
    <string name="PIN">PIN / ijambobanga </string>
    <string name="New_PIN">New PIN / Ijambobanga rishya</string>
    <string name="Confirm_PIN">Confirm PIN / Emeza ijambobanga</string>
    <string name="Amount_txt1">Amount /\nUmubare</string>
    <string name="title_activity_forgot_pin">ForgotPin</string>

    <!--Internet_connectivity-->
    <string name="duration">Duration</string>
    <string name="durationvalue">Select Duration</string>


    <string name="forgotpi">Forgot PIN / Wibagiwe umubare w\’ibanga</string>

    <!--set the some other  validation-->
    <string name="range">cannot be less than 100 RWF</string>
    <string name="range9">number should not be less than 9 digits</string>
    <string name="range4">Pin should not be less than 4 digits</string>
    <string name="range3">amount should not be less than 3 digits</string>

    <string name="pin_not_match">Enter PIN not pin doesnt match with login pin</string>

    <!--Airtime operator list-->

    <string name="select_list">Select Mobile Operator</string>
    <!--register_with_aother_device-->
    <string name="another_device">This device is not registed</string>

    //...................receipe strings..........//
    <string name="Receipt_id">Transaction ID</string>
    <string name="Receipt_member">Status</string>
    <string name="Receipt_type">Transaction Type</string>
    <string name="Receipt_desc"> Description</string>
    <string name="Receipt_amount">Amount:</string>
    <string name="Receipt_print">Print</string>
    <string name="Receipt_title">History</string>
    <string name="Receipt_Date">Date</string>
    <string name="Receipt_customer_no">Customer Number</string>
    <string name="Receipt_token_no">Token Number</string>


    <string name="Start_time">Star Times</string>
    <string name="dstv_name">DSTV</string>
    <string name="current_pin">Current pin is not correct</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices....</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="toast_bt_na">bluetooth is not available</string>
    <string name="lblTestMessage">Print test message</string>

    <string name="connect_lost">Device connection was lost</string>
    <string name="connect_fail">Unable to connect device</string>


    <string name="lblPackage">Package</string>
    <string name="lblProvider">PROVIDER</string>
    <string name="lblValue">VALUE</string>
    <string name="lblExpiryDate">EXPIRY DATE</string>
    <string name="lblVolumeAvailable">VOLUME AVAILABLE</string>
    <string name="lblSerialNo">Serial No</string>
    <string name="lblVoucherNo">Voucher PIN #</string>
    <string name="lblVoucherReceipt">Voucher Receipt</string>
    <string name="lblSignature">Signature</string>
    <string name="not_connected">You are not connected to a device</string>

</resources>

