<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Airtime"
            android:textColor="@color/white"
            android:textSize="@dimen/titleText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/Select_Mobile_Operator"
                android:textSize="15sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:id="@+id/operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/operatorvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/dropdown"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/br_down" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#90000000" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/Mobile_Number"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:inputType="number"
                android:maxLength="9"
                android:textSize="20sp"
                android:theme="@style/EditTextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amount_txt"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/edit_text_left"
                android:inputType="number"
                android:maxLength="15"
                android:textSize="20sp"
                android:theme="@style/EditTextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agent_Pin"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/edit_text_left"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textSize="20sp"
                android:theme="@style/EditTextLabel" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/round"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>
