<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Rra"
            android:textColor="@color/white"
            android:textSize="@dimen/titleText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RRA_Ref_id"
            android:textSize="15sp"
            android:padding="2dp"
            android:textStyle="normal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:inputType="number"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="@dimen/edit_text_left"

            android:theme="@style/EditTextLabel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:text="@string/confirm"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginTop="22dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:background="@drawable/round"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
